--- a/style.css
+++ b/style.css
@@ -283,9 +283,22 @@ nav a:hover {
   padding: 4px;
 }
 
+/* index.html 用イベントタイトル */
 .event-title {
+  text-align: center;
+  font-size: 1.3rem;
   font-weight: bold;
-  margin-bottom: 2px;
+  margin-bottom: 18px;
+  color: #fff;
+}
+
+/* detail.html 用イベントタイトル */
+.detail-event-title {
+  text-align: center;
+  font-size: 2.2rem;
+  font-weight: bold;
+  margin-bottom: 32px;
+  color: #222;
 }
 
 .event-time {
@@ -363,13 +376,6 @@ nav a:hover {
   margin: 0 auto;
   background: none;
   box-shadow: none;
-}
-.event-title {
-  text-align: center;
-  font-size: 2.2rem;
-  font-weight: bold;
-  margin-bottom: 32px;
-  color: #222;
 }
 .event-teams-list {
   display: grid;
